--- a/services/webservice.yaml
+++ b/services/webservice.yaml
@@ -1,4 +1,6 @@
 # webservice settings: see http://docs.exosite.com/reference/services/webservice for more information
+domain: [notexpectd]
+cors: alsonot
 
 # Tag to filter which endpoints to display on the auto-generated documentation
 documented_endpoints:
