--- a/murano.yaml
+++ b/murano.yaml
@@ -38,6 +38,14 @@ options:
   # abort_threshold: 1 # If first deployed solution fails, cancel the release. Default=4
   # abort_ratio: 0.1 # If failures reach 10% of successes, cancel the release. Default=0.5
    
+env_schema:
+  description: my custom description
+  loglevel:
+    type: string
+    description: a loglevel
+    default: warn
+  another_env:
+    default: env
 
 assets:
   location: assets
