--- a/murano.yaml
+++ b/murano.yaml
@@ -39,11 +39,12 @@ options:
   # abort_ratio: 0.1 # If failures reach 10% of successes, cancel the release. Default=0.5
    
 env_schema:
-  description: my custom description
+  description: This text will display on the Solution settings page.
   loglevel:
     type: string
     description: a loglevel
     default: warn
+    enum: [debug, info, warn, error]
   another_env:
     default: env
 
